Link post titles to the original source. Update CSS.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </script>
 
   <script type="text/template" id="post-template">
-    <h2><%- title %></h2>
+    <a href="<%- link %>"><h2><%- title %></h2></a>
     <article><%= content %></article>
   </script>
 
