Add loading indicator

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     <h1>PinCrunch</h1>
   </header>
 
+  <div id="loading">
+    <img src="assets/img/spinner.gif">
+    <span>Loading...</span>
+  </div>
+
   <div id="lightbox" style="display: none">
   </div>
 
